anthos-service-mesh/traffic-policy/template.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: destinationruletlsenabled
spec:
  crd:
    spec:
      names:
        kind: DestinationRuleTLSEnabled
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package asm.guardrails.destinationruletlsenabled

        # spec.trafficPolicy.tls.mode == DISABLE
        violation[{"msg": msg}] {
          d := input.review.object

          d.apiVersion == "networking.istio.io/v1alpha3"
          d.kind == "DestinationRule"

          tpl := d.spec["trafficPolicy"][_]

          tpl == {"mode": "DISABLE"}

          msg := sprintf("spec.trafficPolicy.tls.mode == DISABLE for host(s): %v", [d.spec.host])
        }

        # spec.subsets[].trafficPolicy.tls.mode == DISABLE
        violation[{"msg":msg}] {
          d := input.review.object

          d.apiVersion == "networking.istio.io/v1alpha3"
          d.kind == "DestinationRule"
        
          subset := d.spec["subsets"][_]          
          subset["trafficPolicy"] == { "tls": {"mode": "DISABLE"}}
              
          msg := sprintf("subsets[].trafficPolicy.tls.mode == DISABLE for host-subset: %v-%v", [d.spec.host, subset.name])
        }
